# C-Cpp-Solutions

./: CMakeLists.txt
Semester 1/Assignment1/: 1A1.c  1A10.c  1A2.c  1A3.c  1A4.c  1A5.c  1A6.c  1A7.c  1A8.c  1A9.c
Semester 1/Assignment2/: 2A1.c  2A2.c  2A3.c  2A4.c  2A5.c  2A6.c  2A7.c
Semester 1/Assignment3/: 3A1.c  3A2.c  3A3.c  3A4.c  3A5.c  3A6.c
Semester 1/Assignment4/: 4A1_a.c  4A1_b.c  4A2.c  4A3.c  4A4.c  4A5.c  4A6.c  4A7.c  4A8_a.c  4A8_b.c  4A8_c.c
Semester 1/Assignment5/: 5A1.c  5A2.c  5A3.c  5A4_a.c  5A4_b.c  5A4_c.c  5A5.c  5A6.c  5A7.c  5A8.c
Semester 1/Assignment6/: 6A1.c  6A2.c  6A3.c  6A4.c  6A5.c  6A6.c
Semester 1/Assignment7/: 7A1.c  7A2.c  7A3.c  7A4.c  7A5.c
Semester 1/Assignment8/: 8A1.c
Semester 1/Sample Question Paper 2/: Q1.c  Q2.c  Q3.c  Q4.c  Q5.c  Q6.c  Q7.c  Q8.c
Semester 2/AssignmentSet2/Set2Lab6/: Set2Lab6A1.cpp
Semester 2/Functions Assignment/: Functions_A1.cpp  Functions_A2.cpp  Functions_A3.cpp  Functions_A4.cpp  Functions_A5.cpp
Semester 2/Lab1/: Lab1A1.cpp  Lab1A2.cpp  Lab1A3.cpp  Lab1A4.cpp  Lab1A5.cpp  Lab1A6.cpp
Semester 2/Lab2/: Lab2A1.cpp  Lab2A2.cpp  Lab2A3.cpp
